# jschema-to-python

./: README.rst  setup.cfg
jschema_to_python/: __init__.py  __main__.py  class_generator.py  driver.py  init_file_generator.py  object_model_module_generator.py  python_file_generator.py  to_json.py  utilities.py
tests/: test_class_generator.py
tests/functional_tests/: test_class_generator.py
tests/test_files/: _optional_property.py  _required_property.py  _test_class.py  _test_class_dataclasses.py
tests/unit_tests/class_generator/: test_make_attrib.py  test_make_imports.py  test_make_type_annotation.py
