[metadata]
name = jschema_to_python
author = Larry Golding
author-email = larrygolding@comcast.net
summary = Generate source code for Python classes from a JSON schema.
home-page = https://github.com/lgolding/jschema_to_python
description-file = README.rst
license = MIT
requires-python = >= 2.7
install-requires =
    jsonpickle
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    jschema_to_python