[metadata]
name = jschema_to_python
author = Microsoft Corporation
author-email = v-lgold@microsoft.com
summary = Generate source code for Python classes from a JSON schema.
home-page = https://github.com/microsoft/jschema-to-python
description-file = README.rst
license = MIT
requires-python = >= 2.7
install-requires =
    attrs
    jsonpickle
    pbr
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    jschema_to_python